此次提交更新了订单系统功能，完善了用户提交的逻辑。点击提交时模态框中js代码未能正确执行

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,7 @@
 #spring.thymeleaf.suffix=.html
 
 
+spring.jpa.open-in-view=false
 spring.thymeleaf.cache=false
 spring.application.name=test
 server.servlet.context-path=/
