完成商家上传菜品，更新菜品，下架菜品的操作。

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@
 ## 在构建 URL 时添加到视图名称后的后缀（默认值： .html ）
 #spring.thymeleaf.suffix=.html
 
-
+spring.web.resources.cache.period=0
 spring.jpa.open-in-view=false
 spring.thymeleaf.cache=false
 spring.application.name=test
